# SimpleTextUI

./: .gitignore  IOObj.cpp  IOObj.h  Menu.h  SimpleTextUIErrors.h  _SimpleTextUI.mk  _SimpleTextUI.project  _SimpleTextUI.txt  _test.h  input.h
Debug/: IOObj.cpp.o.d  _SimpleTextUI_IOObj.cpp.o.d  _SimpleTextUI_Menu.cpp.o.d  _SimpleTextUI__test.cpp.o.d  _SimpleTextUI_input.cpp.o.d  src_Menu.cpp.o.d  src__test.cpp.o.d  src_input.cpp.o.d
Release/: IOObj.cpp.o.d  src_Menu.cpp.o.d  src__test.cpp.o.d  src_input.cpp.o.d
cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
include/: Errors.h  IOObj.h  Menu.h  _test.h  input.h
src/: IOObj.cpp  Menu.cpp  _runtest.cpp  _test.cpp  input.cpp
test/: CMakeCache.txt  CMakeLists.txt  Makefile  SimpleTextUITest  cmake_install.cmake  main.cpp
